--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
+@layer base {
+  body {
+    @apply font-body text-[#232428];
+  }
 }
 
-* {
-  box-sizing: border-box;
+@layer components {
+  .headerLink {
+    @apply cursor-pointer opacity-75 transition hover:opacity-100;
+  }
+
+  .headerIcon {
+    @apply h-6 w-6 cursor-pointer opacity-75 transition hover:opacity-100;
+  }
+
+  .link {
+    @apply relative cursor-pointer text-lg font-medium before:absolute before:inset-x-0 before:-bottom-1.5 before:h-0.5 before:origin-left before:scale-x-0 before:transform before:rounded-bl before:bg-black before:transition-all before:duration-200 hover:before:scale-x-100;
+  }
 }
