--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,10 @@
     @apply flex h-12 w-12 flex-shrink-0 cursor-pointer items-center justify-center rounded-full bg-gradient-to-r from-pink-500 to-violet-500 md:h-[50px] md:w-[50px];
   }
 
+  .cartInfo {
+    @apply absolute -right-2 -top-2 z-50 flex h-7 w-7 items-center justify-center rounded-full bg-gradient-to-r from-pink-500 to-violet-500 text-[10px] text-sm text-white;
+  }
+
   .tabPanel {
     @apply grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4;
   }
